# plat-with-celery

./: .gitignore  config  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app/: issue_task.py  model.py  tasks.py
app/utils/: config.py  redis_client.py
