[tool.poetry]
name = "play-with-celery"
version = "0.1.0"
description = ""
authors = ["I"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
celery = "^5.4.0"
redis = "^5.0.8"
pydantic-settings = "^2.4.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
